# darkness

./: .gitignore  CMakeLists.txt  Darkness  Darkness 2  LICENSE  README.md
assets/map/: map.txt
include/core/: button.h  camera.h  globals.h  input.h  map.h  render.h  renderer.h  sprite.h  update.h  window.h
include/entities/: demon.h  fire.h  hail.h  player.h
include/structures/: arraylist.h  gamestate.h  stack.h  vec2.h
src/: main.c
src/core/: button.c  camera.c  input.c  map.c  render.c  renderer.c  sprite.c  update.c  window.c
src/entities/: demon.c  fire.c  hail.c  player.c
src/structures/: arraylist.c  gamestate.c  stack.c  vec2.c
videos/: short.mov
